Add: test cases
