# docs/swagger.json
@@ -36,6 +36,12 @@
                             "$ref": "#/definitions/models.DNSResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/routes.HTTPError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -49,6 +55,12 @@
     "definitions": {
         "models.DNSRequest": {
             "type": "object",
+            "required": [
+                "vel",
+                "x",
+                "y",
+                "z"
+            ],
             "properties": {
                 "vel": {
                     "type": "string"
